@@ -361,11 +361,13 @@ Volunteers for these and other projects are welcome!
 197. Implement a fast lookup table for assembler locations.  Current
      linear search may be too slow for large assembly listings.
 
-198. Have a general mechanism that ensures that timers are called.
-
 199. Use X11R6 XtSignalNotify for Xt-safe signal handling.
 
 200. Make DDD session-aware by using the Xt11R6 SessionShell 
      instead of Xt11R5 ApplicationShell.
 
-201. (Insert your project idea here)
+201. Install hotkeys on the command tool, using Harald Albrecht's
+     hotkey package (in
+     `http://www.igpm.rwth-aachen.de/~albrecht/mnem.html')
+
+202. (Insert your project idea here)
